crates/bevy_ecs/compile_fail/tests/ui/query_lens_lifetime_safety.stderr
error[E0499]: cannot borrow `lens` as mutable more than once at a time
  --> tests/ui\query_lens_lifetime_safety.rs:21:39
   |
20 |             let mut data: Mut<Foo> = lens.query().get_inner(e).unwrap();
   |                                      ---- first mutable borrow occurs here
21 |             let mut data2: Mut<Foo> = lens.query().get_inner(e).unwrap();
   |                                       ^^^^ second mutable borrow occurs here
22 |
23 |             assert_eq!(&mut *data, &mut *data2); // oops UB
   |                              ---- first borrow later used here

error[E0499]: cannot borrow `bar_query` as mutable more than once at a time
  --> tests/ui\query_lens_lifetime_safety.rs:30:29
   |
27 |             let mut join: QueryLens<(&mut Foo, &mut Bar)> = foo_query.join(&mut bar_query);
   |                                                                            -------------- first mutable borrow occurs here
...
30 |             let mut data2 = bar_query.single_mut();
   |                             ^^^^^^^^^ second mutable borrow occurs here
31 |             assert_eq!(&mut *data, &mut *data2); // oops UB
   |                              ---- first borrow later used here

error[E0499]: cannot borrow `bar_query` as mutable more than once at a time
  --> tests/ui\query_lens_lifetime_safety.rs:39:29
   |
36 |                 foo_query.join_inner(bar_query.reborrow());
